# VTD

./: .gitattributes  .gitmodules  CMakeLists.txt  LICENSE.vtd  Makefile  README.md  WHENCE
.github/copyright_updates/: COPYRIGHT_EXCLUDES  README.md  languages_config.yml
.github/workflows/: copyright_updates.yml  main.yml
archive/: README.md  build_archives.py
archive/npu3/df_bandwidth/: df_bw.elf  recipe_df_bandwidth.json
archive/npu3/latency/: recipe_latency.json
archive/npu3/tct_all_column/: recipe_tct_all_column.json
archive/npu3/tct_one_column/: recipe_tct_one_column.json
archive/phx/df_bandwidth/: profile_df_bandwidth.json  validate_df_bandwidth.xclbin
archive/phx/tct_all_column/: recipe_tct_all_column.json
archive/strx/cmd_chain_latency/: recipe_cmd_chain_latency.json
archive/ve2/latency/: nop.elf  (+1 more)
benchmarks/: benchmark_npu4.json  benchmark_npu6.json
configurations/: README.md
elf/: mobilenet_4col.elf  nop_npu3.elf  preempt_4x2.elf  preemption_noop_4x1.elf  preemption_noop_4x2.elf
input_data/mobilenet/: buffer_sizes.json
runner/: README.md
runner/gemm/: recipe_gemm.json
runner/latency/: recipe_latency.json
runner/tct_all_column/: tct_4col.elf
runner/throughput/: recipe_throughput.json
sequences/: aie_reconfig_overhead.txt  df_bw.txt  df_bw_4col.txt  nop.elf  preempt_4x1.elf
sequences/common/: df_bw.txt
sequences/phoenix/: tct_tp_1col_phx.tcl
sequences/strix/: tct_tp_4col_stx.tcl
src/: CMakeLists.txt  Makefile  df_bw.cpp  df_bw_dpu.txt  host_hal.cpp  preempt.cpp  tct_tp.cpp
tools/: README.md  df_bw.tcl  df_bw_1col.tcl  df_bw_4col.tcl  df_bw_dpu.tcl  tct_tp_1col_stx.tcl  tct_tp_4col_phx.tcl
xclbin/: validate_stx.xclbin
xclbin/strix/: 1x4_unit_stx.xclbin  validate.xclbin
xclbin_prod/: gemm_npu4.xclbin  mobilenet_elf_npu4_4x4.xclbin  mobilenet_npu4_4x4.xclbin  preemption_4x2_npu4.xclbin  preemption_4x4_npu4.xclbin  preemption_4x8_npu4.xclbin  validate_npu.xclbin  validate_npu4.xclbin  validate_npu4_elf_4x1.xclbin  validate_npu4_elf_4x2.xclbin  validate_npu4_elf_4x4.xclbin
xclbin_prod/strix/: validate.xclbin
(+25 files in other folders)
